# concord_api

./: .gitignore  Cargo.toml  README.md  auth.md  auth_completion.md  deny.toml  justfile  rate_limit_evolution.md  rate_limit_implementation_plan.md  rust-toolchain.toml
client_api_examples/: Cargo.toml
client_api_examples/src/: main.rs
client_api_lib/: Cargo.toml
client_api_lib/src/: client.rs  codec.rs  endpoint.rs  error.rs  lib.rs  policy.rs  types.rs
client_api_lib/src/codec/: json.rs  text.rs
concord_core/: Cargo.toml
concord_core/src/: __development.rs  auth.rs  auth_provider.rs  body.rs  cache.rs  client.rs  codec.rs  debug.rs  development_executor.rs  endpoint.rs  error.rs  execution_meta.rs  header_ownership.rs  inflight.rs  io.rs  lib.rs  media.rs  multipart.rs  multipart_response.rs  pagination.rs  policy.rs  rate_limit.rs  record.rs  redaction.rs  request.rs  response_classify.rs  retry.rs  retry_admission.rs  retry_mode.rs  runtime.rs  runtime_hooks.rs  runtime_state.rs  secret.rs  sse.rs  stream_body.rs  stream_response.rs  timeout.rs  transport.rs  types.rs  websocket.rs
concord_core/src/__private/: mod.rs  v1.rs
concord_core/src/auth/: core.rs  credentials.rs  errors.rs  future.rs  http.rs  ids.rs  materials.rs  mod.rs  orchestrator.rs  plan.rs  providers.rs  usage.rs  util.rs
concord_core/src/client/: api.rs  auth_http.rs  build.rs  context.rs  execute.rs  mod.rs  retry_flow.rs  send_flow.rs
concord_core/src/codec/: json.rs  text.rs
concord_core/src/endpoint/: plan.rs
concord_core/src/pagination/: cursor.rs  offset_limit.rs  paged.rs
concord_core/src/policy/: feature.rs  resolved.rs
concord_core/src/rate_limit/: context.rs  error.rs  governor_runtime.rs  limiter.rs  mod.rs  no_governor_default.rs  plan.rs  response.rs
concord_core/src/regression_tests/: common.rs  deterministic_executor.rs  mod.rs  native_runtime.rs  output_model.rs  pagination.rs  public_request_bodies.rs  rate_limit.rs  redaction_matrix.rs  request_entities.rs  request_error.rs  response_body_limit.rs  retry_modes.rs  runtime_config.rs  runtime_order.rs  safe_response_url.rs  tls_preflight.rs
concord_core/src/runtime/: config.rs
concord_core/tests/: auth_runtime.rs  cache_runtime.rs  current_core.rs  custom_codec_traits.rs  development_boundary.rs  main.rs  pagination_runtime.rs  public_extension.rs  rate_limit_runtime.rs  redaction.rs  retry_runtime.rs  runtime_config.rs  runtime_order.rs  support.rs  tls_feature_boundary.rs  v5_core.rs
concord_core/tests/current_core/: README.md  auth.rs  cache.rs  common.rs  concurrency.rs  inflight.rs  pagination.rs  public_api.rs  rate_limit.rs  runtime_order.rs  strictness.rs
concord_core/tests/fixtures/: development_boundary.rs  development_generation_private.rs
concord_core/tests/integration/: auth_runtime.rs  cache_runtime.rs  current_core.rs  custom_codec_traits.rs  pagination_runtime.rs  rate_limit_runtime.rs  redaction.rs  retry_runtime.rs  runtime_config.rs  runtime_order.rs
concord_core/tests/support/: assertions.rs  mod.rs  redaction.rs  transport.rs
concord_core/tests/v5_core/: README.md  auth.rs  cache.rs  common.rs  inflight.rs  pagination.rs  runtime_order.rs
concord_examples/: Cargo.toml
concord_examples/src/: auth_session.rs  custom_codec.rs  custom_cursor_pagination.rs  custom_endpoint_state.rs  custom_pagination.rs  ddragon.rs  docs_advanced_dsl.rs  docs_dsl.rs  endpoint_io.rs  endpoint_state_custom_pagination.rs  explicit_endpoint.rs  lib.rs  main.rs  minimal.rs  pagination.rs  policy_stack.rs  riot.rs  test_api.rs  ui_doc.rs  url_host_path.rs
concord_examples/src/ui_doc/: ambiguous_placeholder_vars_and_endpoint.rs  client_header_decl_forbidden.rs  client_header_unknown_var.rs  conflicting_defaults_same_placeholder.rs  conflicting_optionality_same_placeholder.rs  conflicting_types_same_placeholder.rs  decl_missing_explicit_type.rs  duplicate_endpoint_name.rs  host_label_literal_contains_dot.rs  optional_var_used_in_route.rs  route_literal_contains_braces.rs  route_optional_placeholder.rs  unknown_placeholder_in_route.rs
concord_examples/src/v5/: auth_session.rs  explicit_endpoint.rs  fmt.rs  minimal.rs  mod.rs  pagination.rs  riot_like.rs  runtime_config.rs
concord_examples/tests/: auth_core.rs  auth_dsl.rs  auth_session.rs  body_part_present.rs  cache_dsl.rs  client_headers_format_optional_gating.rs  client_headers_lit_ref.rs  common.rs  current_docs.rs  custom_pagination.rs  debug_level_override.rs  dev_doc.rs  docs_dsl.rs  dsl_reference_docs.rs  header_keyless_decl_ref.rs  header_remove_override.rs  host_prefix_order.rs  live_smoke_entrypoints.rs  main.rs  map_transform.rs  mapping.rs  minimal.rs  new_arg_order_route_then_query.rs  pagination.rs  pagination_cursor.rs  pagination_tests.rs  path_join_normalization.rs  policy_headers.rs  policy_query.rs  policy_query_fmt.rs  prefix_path_policy_headers_query.rs  public_api.rs  query_format_optional_gating.rs  query_keys_optionals_defaults.rs  query_remove_and_push.rs  rate_limit_dsl.rs  release_docs.rs  retry_dsl.rs  riot_large.rs  riot_rate_limits.rs  (+29 more)
concord_examples/tests/integration/: auth_session.rs  custom_codec.rs  custom_cursor_pagination.rs  custom_pagination.rs  endpoint_io.rs  (+6 more)
concord_macros/: Cargo.toml
concord_macros/src/: ast.rs  codegen.rs  derive_controller_build.rs  emit_helpers.rs  ir.rs  kw.rs  lib.rs  limits.rs  model.rs  parse.rs  sema.rs
concord_macros/tests/: auth_helpers.rs  current.rs  main.rs  pagination_helpers.rs  strictness.rs  trybuild_codegen.rs  trybuild_current.rs  trybuild_sema.rs  v5.rs
concord_test_support/: Cargo.toml
concord_test_support/src/: assert.rs  compatibility_loopback.rs  deterministic.rs  deterministic_assert.rs  lib.rs  mock.rs
perf/: Cargo.toml  README.md
perf/benches/: allocation_counts.rs  attempt_pipeline.rs  auth_runtime.rs  generated_client.rs  managed_client.rs  native_paths.rs  pagination.rs  rate_limit_governor.rs  redaction_hooks.rs  request_bodies.rs  retry_modes.rs  smoke.rs  streaming_response.rs  streaming_upload.rs  visible_execution.rs
perf/src/: lib.rs
(+1130 files in other folders)
