[workspace]
members = [
    "concord_core",
    "concord_macros",
    "concord_examples",
    "concord_test_support",
]
default-members = ["concord_core", "concord_macros"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
reqwest = { version = "0.13", default-features = false }
http = "1.4"
bytes = "1.12"
serde = "1.0"
serde_json = "1.0"
base64 = "0.22"
tokio = { version = "1.52", default-features = false }
thiserror = "2.0.18"
urlencoding = "2.1.3"
url = "2.5.8"
httpdate = "1.0.3"
futures-core = "0.3.32"

dotenvy = "0.15.7"
governor = "0.10.4"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
panic = "abort"


[profile.dev.package.concord_macros]
opt-level = 3

[profile.dev.package.syn]
opt-level = 3

[profile.dev.package.quote]
opt-level = 3

[profile.dev.package.proc-macro2]
opt-level = 3
