[package]
name = "client_api_examples"
version = "0.1.0"
edition = "2024"

[dependencies]
client_api_lib = { path = "../client_api_lib", features = ["json"] }
client_api_macros = { path = "../client_api_macros" }
http.workspace = true
serde.workspace = true
reqwest.workspace = true
tokio = {workspace = true, features = ["rt-multi-thread", "macros"]}