[package]
name = "client_api_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest={workspace = true, features = ["default"]}
http.workspace = true
bytes.workspace = true
serde =  { workspace = true, optional = true,features = ["derive"] }
serde_json={workspace = true, optional = true}
base64.workspace = true
thiserror.workspace = true
url.workspace = true
urlencoding.workspace = true
[features]
json=["serde","serde_json"]