[package]
name = "concord_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["default-tls", "http2", "stream"] }
http.workspace = true
bytes.workspace = true
memchr.workspace = true
csv.workspace = true
csv-core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
base64.workspace = true
thiserror.workspace = true
url.workspace = true
urlencoding.workspace = true
httpdate.workspace = true
tokio.workspace = true
governor = { workspace = true, optional = true }
futures-core.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }


[features]
default = ["rate-limit-governor"]
json = ["reqwest/json"]
gzip = ["reqwest/gzip"]
brotli = ["reqwest/brotli"]
deflate = ["reqwest/deflate"]
cookies = ["reqwest/cookies"]
multipart = ["reqwest/multipart"]
rate-limit-governor = ["dep:governor"]
