[package]
name = "concord_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true, optional = true, features = ["default-tls", "http2", "stream"] }
http.workspace = true
bytes.workspace = true
memchr.workspace = true
csv = { workspace = true, optional = true }
csv-core = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
base64.workspace = true
thiserror.workspace = true
url.workspace = true
urlencoding.workspace = true
httpdate.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt", "sync", "time"] }
governor = { workspace = true, optional = true }
futures-core.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }


[features]
default = ["rate-limit-governor", "records-csv", "transport-reqwest"]
transport-reqwest = ["dep:reqwest"]
json = []
records-csv = ["dep:csv", "dep:csv-core"]
gzip = ["transport-reqwest", "reqwest/gzip"]
brotli = ["transport-reqwest", "reqwest/brotli"]
deflate = ["transport-reqwest", "reqwest/deflate"]
cookies = ["transport-reqwest", "reqwest/cookies"]
multipart = ["transport-reqwest", "reqwest/multipart"]
rate-limit-governor = ["dep:governor"]
