[package]
name = "concord_core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["stream"] }
http.workspace = true
bytes.workspace = true
memchr.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
base64.workspace = true
thiserror.workspace = true
url.workspace = true
urlencoding.workspace = true
httpdate.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt", "sync", "time"] }
governor = { workspace = true, optional = true }
futures-core.workspace = true
http-body.workspace = true
http-body-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }


[features]
default = ["rate-limit-governor", "default-tls", "http2"]
json = []
gzip = ["reqwest/gzip"]
brotli = ["reqwest/brotli"]
deflate = ["reqwest/deflate"]
multipart = ["reqwest/multipart"]
default-tls = ["reqwest/default-tls"]
http2 = ["reqwest/http2"]
rate-limit-governor = ["dep:governor"]
dangerous-raw-response = []
dangerous-dev-tools = []
