[package]
name = "concord_examples"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
concord_core = { path = "../concord_core", features = ["json"] }
concord_macros = { path = "../concord_macros" }
http.workspace = true
serde.workspace = true
reqwest = { workspace = true, features = ["default"] }
tokio = {workspace = true, features = ["rt-multi-thread", "macros"]}
serde_json.workspace = true
dotenvy.workspace = true
bytes = "1.11.0"
url = "2.5.7"



[dev-dependencies]
trybuild = "1"