[package]
name = "concord_examples"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
concord_core = { path = "../concord_core", features = ["json"] }
concord_macros = { path = "../concord_macros" }
http.workspace = true
serde.workspace = true
reqwest = { workspace = true, features = ["default"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
serde_json.workspace = true
dotenvy.workspace = true
bytes.workspace = true
url.workspace = true


[dev-dependencies]
trybuild = "1"
concord_test_support = { path = "../concord_test_support" }

[features]
default = ["cache-moka"]
cache-moka = ["concord_core/cache-moka"]
