[package]
name = "concord_examples"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
concord_core = { path = "../concord_core", version = "0.1.0", features = ["json"] }
concord_macros = { path = "../concord_macros", version = "0.1.0" }
http.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
serde_json.workspace = true
dotenvy.workspace = true
bytes.workspace = true
url.workspace = true

[features]
dangerous-raw-response = ["concord_core/dangerous-raw-response"]
dangerous-dev-tools = ["concord_core/dangerous-dev-tools"]


[dev-dependencies]
trybuild = "1"
concord_test_support = { path = "../concord_test_support", version = "0.1.0" }

