[package]
name = "concord_macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", default-features = false, features = [
    "full",
    "visit",
    "extra-traits",
    "parsing",
    "printing",
    "clone-impls",
] } #//"parsing", "proc-macro", "printing",
http.workspace = true
url.workspace = true

[dev-dependencies]
bytes.workspace = true
concord_core = { path = "../concord_core", version = "0.1.0", features = ["json"] }
concord_test_support = { path = "../concord_test_support", version = "0.1.0" }
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
futures-core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
trybuild = "1"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
