[package]
name = "concord_test_support"
version = "0.1.0"
edition.workspace = true
license.workspace = true


[dependencies]
concord_core = { path = "../concord_core", version = "0.1.0" }
bytes.workspace = true
http.workspace = true
serde.workspace = true
url.workspace = true
serde_json.workspace = true
