[package]
name = "concord_test_support"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true


[dependencies]
concord_core = { path = "../concord_core", version = "0.1.0" }
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
serde.workspace = true
url.workspace = true
serde_json.workspace = true

[features]
default = []
dangerous-dev-tools = ["concord_core/dangerous-dev-tools"]
loopback-compat = ["dangerous-dev-tools"]
