[package]
name = "perf"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
concord_core = { path = "../concord_core", version = "0.1.0" }
bytes = "1.12"
http = "1.4"
tokio = { version = "1.52", features = ["rt", "time", "io-util", "sync"] }
criterion = { version = "0.8.2", features = ["async_tokio"] }
futures-core = "0.3.32"
futures-util = "0.3.32"
url = "2.5.8"

[lib]
path = "src/lib.rs"

[[bench]]
name = "smoke"
harness = false

[[bench]]
name = "streaming_upload"
harness = false

[[bench]]
name = "rate_limit_governor"
harness = false

[[bench]]
name = "attempt_pipeline"
harness = false
