[package]
name = "perf"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.97"

[dependencies]
concord_core = { path = "../concord_core", version = "0.1.0", features = ["dangerous-raw-response"] }
bytes = "1.12"
http = "1.4"
http-body = "1.0"
http-body-util = "0.1"
reqwest = { version = "=0.13.4", default-features = false }
tokio = { version = "1.52", features = ["rt", "time", "io-util", "sync"] }
criterion = { version = "0.8.2", features = ["async_tokio"] }
futures-core = "0.3.32"
futures-util = "0.3.32"
url = "2.5.8"

[lib]
path = "src/lib.rs"

[[bench]]
name = "smoke"
harness = false

[[bench]]
name = "streaming_upload"
harness = false

[[bench]]
name = "rate_limit_governor"
harness = false

[[bench]]
name = "attempt_pipeline"
harness = false

[[bench]]
name = "auth_runtime"
harness = false

[[bench]]
name = "pagination"
harness = false

[[bench]]
name = "redaction_hooks"
harness = false

[[bench]]
name = "streaming_response"
harness = false

[[bench]]
name = "allocation_counts"
harness = false
