[package]
name = "perf"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.97"

[dependencies]
concord_core = { path = "../concord_core", version = "0.1.0", features = ["multipart", "dangerous-dev-tools"] }
concord_macros = { path = "../concord_macros", version = "0.1.0" }
concord_test_support = { path = "../concord_test_support", version = "0.1.0", features = ["dangerous-dev-tools"] }
bytes = "1.12"
http = "1.4"
tokio = { version = "1.52", features = ["rt", "time"] }
criterion = { version = "0.8.2", features = ["async_tokio"] }

[lib]
path = "src/lib.rs"

[[bench]]
name = "managed_client"
harness = false

[[bench]]
name = "generated_client"
harness = false

[[bench]]
name = "request_bodies"
harness = false

[[bench]]
name = "visible_execution"
harness = false

[[bench]]
name = "native_paths"
harness = false
